--- a/composer.json
+++ b/composer.json
@@ -44,10 +44,19 @@
     "wpackagist-plugin/user-switching": "*",
     "wpackagist-plugin/what-the-file": "*",
     "wpackagist-plugin/wp-mail-smtp": "*",
-    "wpackagist-plugin/wp-migrate-db": "*",
+    "wpackagist-plugin/wp-migrate-db": "^2.0",
     "wpackagist-plugin/really-simple-ssl": "*",
     "wpackagist-plugin/insert-headers-and-footers": "*",
-    "wpackagist-plugin/add-from-server":"*"
+    "wpackagist-plugin/add-from-server":"*",
+    "wpackagist-plugin/admin-menu-editor": "^1.9",
+    "wpackagist-plugin/advanced-access-manager": "^6.7",
+    "wpackagist-plugin/advanced-custom-fields": "^5.9",
+    "wpackagist-plugin/contact-form-7": "^5.4",
+    "wpackagist-plugin/custom-post-type-ui": "^1.9",
+    "wpackagist-plugin/duplicate-page": "^4.4",
+    "wpackagist-plugin/flamingo": "^2.2",
+    "wpackagist-plugin/post-types-order": "1.9.5.6",
+    "wpackagist-plugin/wpcf7-recaptcha": "^1.3"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
