--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 DB_NAME='wordpress'
 DB_USER='root'
-DB_PASSWORD='root'
+DB_PASSWORD=''
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
 # DATABASE_URL='mysql://database_user:database_password@database_host:database_port/database_name'
 
 # Optional variables
-DB_HOST='database'
+DB_HOST='localhost'
 # DB_PREFIX='wp_'
 
 WP_ENV='development'
-WP_HOME='http://localhost'
+WP_HOME='http://localhost/bedrock/web'
 WP_SITEURL="${WP_HOME}/wp"
 WP_DEBUG_LOG=/path/to/debug.log
 
