--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ DB_HOST='localhost'
 # DB_PREFIX='wp_'
 
 WP_ENV='development'
-WP_HOME='http://localhost/bedrock2/web'
+WP_HOME='http://localhost/bedrock/web'
+#WP_HOME='http://10.0.0.30/bedrock/web'
 WP_SITEURL="${WP_HOME}/wp"
 WP_DEBUG_LOG=/path/to/debug.log
 
