--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ DB_HOST='localhost'
 
 WP_ENV='development'
 WP_HOME='http://localhost/bedrock/web'
+#WP_HOME='http://10.0.1.138/bedrock/web'
 WP_SITEURL="${WP_HOME}/wp"
 WP_DEBUG_LOG=/path/to/debug.log
 
